feat: add modern landing page with navbar for F1 team and league app

--- a/vibe-coding/index.html
+++ b/vibe-coding/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>F1 Team & League Hub</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <nav class="navbar">
+        <div class="nav-container">
+            <span class="nav-logo">F1 Hub</span>
+            <ul class="nav-links">
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#about-team">Team</a></li>
+                <li><a href="#drivers">Drivers</a></li>
+                <li><a href="#races">Races</a></li>
+                <li><a href="#about-league">Leagues</a></li>
+            </ul>
+        </div>
+    </nav>
+    <main class="landing-container">
+        <section class="hero">
+            <h1>F1 Team & League Hub</h1>
+            <p class="subtitle">Your one-stop destination for all things related to your F1 team and league.</p>
+            <a href="#about-team" class="cta-btn">Learn More</a>
+        </section>
+        <section id="about-team" class="info-section">
+            <h2>About the Team</h2>
+            <p>Discover stats, drivers, history, and the latest news about your favorite F1 team. (Content coming soon!)</p>
+        </section>
+        <section id="about-league" class="info-section">
+            <h2>About the League</h2>
+            <p>Explore league standings, race schedules, and more. (Content coming soon!)</p>
+        </section>
+    </main>
 </body>
 </html> 
